--- a/sections/appendices.tex
+++ b/sections/appendices.tex
@@ -243,21 +243,21 @@ Restart recommend worker:
 
 \subsection{Framework}
 
-% \input{./listings/source/framework.tex}
+\input{./listings/source/framework.tex}
 
 \subsection{Recommender Engine: In-Common}
 
-% \input{./listings/source/inCommon.tex}
+\input{./listings/source/inCommon.tex}
 
 \subsection{Recommender Engine: Item-Similarity}
 
-% \input{./listings/source/itemSimilarity.tex}
+\input{./listings/source/itemSimilarity.tex}
 
 \subsection{Demo Domain System: Magento}
 
-% \input{./listings/source/magento.tex}
+\input{./listings/source/magento.tex}
 
 \subsection{Provisioning}
 \label{appendix-soure-code-provisioning}
 
-% \input{./listings/source/provision.tex}
+\input{./listings/source/provision.tex}
