--- a/meta/abstract.tex
+++ b/meta/abstract.tex
@@ -2,4 +2,4 @@
 
 Recommender engines suggest useful but relevant items to a user in their search process e.g. on an e-commerce website. In order to do this, recommender engines rely on multiple techniques, notably \emph{collaborative filtering} and \emph{content-based filtering}. However, they are usually tightly coupled to the application they are used in and therefore dependent on its data model as well as technical constraints. The adaptation of recommender engines requires knowledge and expertise in both the application and recommender engines. This effort also leads to more complexity which makes subsequent changes very expensive and time consuming. Being tightly coupled, a recommender engine is very likely to be incompatible for another application.
 
-This project aims to develop an integration framework which offers an alternative, loose-coupled approach. In order to demonstrate its capabilities, two recommender engines -- each relying on fundamentally different techniques, namely \emph{collaborative} and \emph{content-based} -- are to be implemented and linked to the framework. Then, the framework is to be integrated into the complex and popular e-commerce application \emph{Magento}.
+This project aimed to develop an integration framework which offers an alternative, loose-coupled approach. In order to demonstrate its capabilities, two recommender engines -- each relying on fundamentally different techniques, namely \emph{collaborative} and \emph{content-based} -- were  implemented and linked to the framework. Finally, the framework has been integrated into the complex and popular e-commerce application \emph{Magento}.
