--- a/sections/appendices.tex
+++ b/sections/appendices.tex
@@ -4,9 +4,9 @@
 
 \section{User Manuals}
 
-\subsection{Content of the enclosed DVD}
+\subsection{Content of the accompanying DVD}
 
-A DVD is enclosed in the report which has the following directories:
+A DVD is enclosed in the report and has the following content:
 
 \begin{description}
     \item[Prerequisites] Software installers for \emph{Windows} and \emph{Mac OS X}.
