--- a/sections/implementation.tex
+++ b/sections/implementation.tex
@@ -170,7 +170,7 @@ class HybridEngine(ParentHybridEngine):
 
 \subsection{Collaborative Recommender Engine: In-Common}
 
-This recommender engine has a collaborative filtering approach and basically performs recommendations as shown in Figure \ref{fig:intro-techniques-collaborative}: \texttt{recommend items which other users, who have experienced the same items as the given user, have experienced but the given user has not yet}. The fundamental idea behind this engine is to parametise the aforementioned query. There are four parameters in this query: \emph{subject} such as a user or customer, \emph{object} such as a product, \emph{relationship} such as viewed or favourited and \emph{subject ID} such as the current user. After putting the parameters in place the query is now: \texttt{recommend \{OBJECT\} wich other \{SUBJECT\}, wo have \{RELATIONSHIP\} the same \{OBJECT\} as the \{SUBJECT ID\}, have \{RELATIONSHIP\} but the \{SUBJECT ID\} has not yet}.
+This recommender engine has a collaborative filtering approach and basically performs recommendations as shown in Figure \ref{fig:intro-techniques-collaborative}: \texttt{recommend items which other users, who have experienced the same items as the given user, have experienced but the given user has not yet}. The fundamental idea behind this engine is to parametise the aforementioned query. There are four parameters in this query: \emph{subject} such as a user or customer, \emph{object} such as a product, \emph{relationship} such as viewed or favourited and \emph{subject ID} such as the current user.
 
 The engine is processing events and recommendation requests in real-time. Although it persists data, it is data-agnostic -- in other words, it knows how the data is structured but does not require knowledge about the data itself.
 
