--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -86,7 +86,7 @@ As mentioned above, the primary objective of this project is the development of 
 
 In order to validate that the framework implements the aforementioned properties, two recommender engines, fundamentally different in their approaches, are to be developed -- namely a collaborative recommender (as described in \ref{intro-bg-tech-collaborative}) and a content-based recommender (as specified in \ref{intro-bg-tech-contentbased}).
 
-Although they are going to be used with the framework, they should be designed to be fully functional and exist standalone. Their algorithmic correctness and practicality shall be reviewed in the evaluation. At the same time, the focus of this project is on the development of the framework. This means that these recommender engines may be somewhat simplified.
+Although they are going to be used with the framework, they should be designed to be fully functional and exist standalone. Their results and practicality shall be reviewed in the evaluation. At the same time, the focus of this project is on the development of the framework. This means that these recommender engines may be somewhat simplified.
 
 \subsection{Integration Into a Demo Application}
 \label{intro-objectives-demo}
